--- a/enviroment.yml
+++ b/enviroment.yml
@@ -3,6 +3,7 @@ channels:
 - conda-forge
 - defaults
 dependencies:
+- numpy=1.*
 - basemap=1.*
 - curl=7.*
 - flask=0.*
@@ -10,7 +11,6 @@ dependencies:
 - hdf5=1.*
 - matplotlib=2.*
 - netcdf4=1.*
-- numpy=1.*
 - pip=9.*
 - pyparsing=2.*
 - python=3.*
@@ -19,6 +19,7 @@ dependencies:
 - pyyaml=3.*
 - yaml=0.*
 - libgfortran=3.*
+- mysqlclient=1.*
 - pip:
   - backports.functools-lru-cache==1.*
-
+  - python-apt
